resolving shell errors

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ GOOGLE_CLIENT_ID=''
 GOOGLE_CLIENT_SECRET=''
 		
 SUPABASE_SERVICE_ROLE_KEY=''
-NEXT_PUBLIC_SUPABASE_URL='https://https//ghtrmopaptjeinhmytip.supabase.co'
+NEXT_PUBLIC_SUPABASE_URL='https//ghtrmopaptjeinhmytip.supabase.co'
 NEXT_PUBLIC_SUPABASE_ANON_KEY=''
