--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "clear&&next dev --turbo 2>(2>&1 |tee ./error.txt ) |tee -a ./out.txt && del \"./)\" && nvim ./error.txt",
+    "dev": "clear&&next dev --turbo | tee out.txt",
     "build": "next build",
     "start": "next start",
     "lint": "npx @biomejs/biome lint . --apply",
@@ -16,32 +16,18 @@
     "introspect": "drizzle-kit introspect:pg",
     "setupdb": "npm run introspect&&npm run generate&&npm run migrate",
     "refresh": "rm -r .next&&npx next telemetry disable&&npm run dev",
-    "update-types": "npx supabase gen types typescript --project-id \"cjihcgtrocbcvasgfyoq\" --schema public > ./src/server/db/supabase.types.ts --schema auth > ./src/server/db/supabase.auth.types.ts",
+    "update-types": "npx supabase gen types typescript --project-id \"ghtrmopaptjeinhmytip\" --schema public > ./src/server/db/supabase.types.ts --schema auth > ./src/server/db/supabase.auth.types.ts",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "postinstall": "prisma generate",
     "echo": "node ./scriptease.js"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.4.0",
-    "@prisma/client": "^5.10.2",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.25.0",
-    "@trpc/client": "next",
-    "@trpc/next": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
-    "drizzle-kit": "^0.20.17",
-    "drizzle-orm": "^0.30.9",
-    "next": "^14.2.3",
-    "next-auth": "^4.24.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "superjson": "^2.2.1",
-    "zod": "^3.23.3",
     "@auth/drizzle-adapter": "^0.3.12",
+    "@auth/prisma-adapter": "^1.4.0",
     "@auth/supabase-adapter": "^0.1.17",
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.10.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -52,47 +38,60 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.3",
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.25.0",
+    "@trpc/client": "next",
+    "@trpc/next": "next",
+    "@trpc/react-query": "next",
+    "@trpc/server": "next",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
     "draft-js": "^0.11.7",
+    "drizzle-kit": "^0.20.17",
+    "drizzle-orm": "^0.30.9",
     "lucide-react": "^0.302.0",
+    "next": "^14.2.3",
+    "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "sharp": "^0.33.2",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.3",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.4.1",
+    "@t3-oss/env-nextjs": "^0.7.1",
     "@types/eslint": "^8.56.2",
+    "@types/jquery": "^3.5.29",
     "@types/node": "^20.11.20",
+    "@types/pg": "^8.10.9",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.8",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.10.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2",
-    "@biomejs/biome": "1.4.1",
-    "@t3-oss/env-nextjs": "^0.7.1",
-    "@types/jquery": "^3.5.29",
-    "@types/pg": "^8.10.9",
-    "autoprefixer": "^10.0.1",
-    "drizzle-kit": "^0.20.8",
     "supabase": "^1.136.3",
+    "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.4.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.32.0"
