--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^0.3.12",
-    "@auth/prisma-adapter": "^1.4.0",
     "@auth/supabase-adapter": "^0.1.17",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.10.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -35,27 +33,24 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.3",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.25.0",
-    "@trpc/client": "next",
-    "@trpc/next": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.44.1",
+    "@trpc/next": "^10.44.1",
+    "@trpc/react-query": "^10.44.1",
+    "@trpc/server": "^10.44.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
     "draft-js": "^0.11.7",
-    "drizzle-kit": "^0.20.17",
-    "drizzle-orm": "^0.30.9",
+    "drizzle-orm": "^0.29.2",
     "lucide-react": "^0.302.0",
-    "next": "^14.2.3",
-    "next-auth": "^4.24.6",
+    "next": "14.0.4",
     "next-themes": "^0.2.1",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18",
+    "react-dom": "^18",
     "react-draft-wysiwyg": "^1.15.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
@@ -63,35 +58,25 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.3",
+    "zod": "^3.22.4",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.4.1",
     "@t3-oss/env-nextjs": "^0.7.1",
-    "@types/eslint": "^8.56.2",
     "@types/jquery": "^3.5.29",
-    "@types/node": "^20.11.20",
+    "@types/node": "^20",
     "@types/pg": "^8.10.9",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "drizzle-kit": "^0.20.8",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
-    "postcss": "^8.4.34",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
+    "postcss": "^8",
     "supabase": "^1.136.3",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.2"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.32.0"
+    "typescript": "^5"
   },
   "packageManager": "npm@10.5.0"
 }
