--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,7 +53,7 @@
     "next.config.mjs",
     "src/env.mjs",
     "src/components"
- ],
+, "make_routes.mjs" ],
   "exclude": [
     "node_modules", "**/fontawesome6/*","nodemon"
   ]
