--- a/biome.json
+++ b/biome.json
@@ -18,7 +18,8 @@
 			},
 			"correctness": {
 				"all": true,
-				"useExhaustiveDependencies": "off"
+				"useExhaustiveDependencies": "off",
+				"noUnreachable":"warn"
 			},
 			"style": {
 				"noParameterAssign": "warn",
